Add mutex to CAN tx

--- a/NASA-RMC-RT.ioc
+++ b/NASA-RMC-RT.ioc
@@ -11,7 +11,8 @@ CAN.SJW=CAN_SJW_1TQ
 CAN.TTCM=ENABLE
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_vTaskDelayUntil=1
-FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_PREEMPTION,INCLUDE_vTaskDelayUntil
+FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_PREEMPTION,INCLUDE_vTaskDelayUntil,Mutexes01
+FREERTOS.Mutexes01=canTxMutex,Static,canTxMutexControlBlock
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;achooController,0,128,achooControllerFunc,As external,NULL,Static,achooControllerBuffer,achooControllerControlBlock;canRxDispatch,1,128,canRxDispatchTask,As external,NULL,Static,canRxDispatchBuffer,canRxDispatchControlBlock
 FREERTOS.configUSE_PREEMPTION=0
 File.Version=6
