Create gesundheit controller
Adds relay control, state machine, messages, and limit reads

--- a/NASA-RMC-RT.ioc
+++ b/NASA-RMC-RT.ioc
@@ -21,7 +21,7 @@ FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_vTaskDelayUntil=1
 FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_PREEMPTION,INCLUDE_vTaskDelayUntil,Mutexes01
 FREERTOS.Mutexes01=canTxMutex,Static,canTxMutexControlBlock
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;achooController,0,128,achooControllerFunc,As external,NULL,Static,achooControllerBuffer,achooControllerControlBlock;canRxDispatch,1,128,canRxDispatchTask,As external,NULL,Static,canRxDispatchBuffer,canRxDispatchControlBlock
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;achooController,0,128,achooControllerFunc,As external,NULL,Static,achooControllerBuffer,achooControllerControlBlock;canRxDispatch,1,128,canRxDispatchTask,As external,NULL,Static,canRxDispatchBuffer,canRxDispatchControlBlock;gesundheitTask,0,128,gesundheitControllerFunc,As external,NULL,Static,gesundheitTaskBuffer,gesundheitTaskControlBlock
 FREERTOS.configUSE_PREEMPTION=0
 File.Version=6
 KeepUserPlacement=false
@@ -68,17 +68,15 @@ Mcu.Pin34=PC12
 Mcu.Pin35=PB3
 Mcu.Pin36=PB4
 Mcu.Pin37=PB5
-Mcu.Pin38=PB6
-Mcu.Pin39=PB7
+Mcu.Pin38=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin39=VP_SYS_VS_tim1
 Mcu.Pin4=PF1-OSC_OUT
-Mcu.Pin40=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin41=VP_SYS_VS_tim1
 Mcu.Pin5=PA0
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA5
-Mcu.PinsNb=42
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303RETx
@@ -211,21 +209,13 @@ PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-TRACESWO
 PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=R_GESUNDEXTR_RV
+PB4.GPIO_Label=R_GESUNDEXT_RV
 PB4.Locked=true
 PB4.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=R_GESUNDEXTR_FW
+PB5.GPIO_Label=R_GESUNDEXT_FW
 PB5.Locked=true
 PB5.Signal=GPIO_Output
-PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=R_GESUNDEXTL_RV
-PB6.Locked=true
-PB6.Signal=GPIO_Output
-PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=R_GESUNDEXTL_FW
-PB7.Locked=true
-PB7.Signal=GPIO_Output
 PC10.GPIOParameters=GPIO_Label
 PC10.GPIO_Label=R_GESUNDR_FW
 PC10.Locked=true
