Drivetrain system debug and improvements

--- a/NASA-RMC-RT.ioc
+++ b/NASA-RMC-RT.ioc
@@ -21,7 +21,7 @@ FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_vTaskDelayUntil=1
 FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_PREEMPTION,INCLUDE_vTaskDelayUntil,Mutexes01
 FREERTOS.Mutexes01=canTxMutex,Static,canTxMutexControlBlock
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;achooController,0,128,achooControllerFunc,As external,NULL,Static,achooControllerBuffer,achooControllerControlBlock;canRxDispatch,1,128,canRxDispatchTask,As external,NULL,Static,canRxDispatchBuffer,canRxDispatchControlBlock;gesundheitTask,0,128,gesundheitControllerFunc,As external,NULL,Static,gesundheitTaskBuffer,gesundheitTaskControlBlock;sneezeControl,0,128,sneezeControllerFunc,As external,NULL,Static,sneezeControlBuffer,sneezeControlControlBlock
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;achooController,0,128,achooControllerFunc,As external,NULL,Static,achooControllerBuffer,achooControllerControlBlock;canRxDispatch,1,128,canRxDispatchTask,As external,NULL,Static,canRxDispatchBuffer,canRxDispatchControlBlock;gesundheitTask,0,128,gesundheitControllerFunc,As external,NULL,Static,gesundheitTaskBuffer,gesundheitTaskControlBlock;sneezeControl,0,128,sneezeControllerFunc,As external,NULL,Static,sneezeControlBuffer,sneezeControlControlBlock;drivetrainTask,0,128,drivetrain_loop,As external,NULL,Static,drivetrainTaskBuffer,drivetrainTaskControlBlock
 FREERTOS.configUSE_PREEMPTION=0
 File.Version=6
 KeepUserPlacement=false
