--- a/NASA-RMC-RT.ioc
+++ b/NASA-RMC-RT.ioc
@@ -1,11 +1,19 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.ContinuousConvMode=ENABLE
+ADC1.EOCSelection=ADC_EOC_SEQ_CONV
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,EOCSelection,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,Offset-2\#ChannelRegularConversion,NbrOfConversion
+ADC1.NbrOfConversion=2
 ADC1.NbrOfConversionFlag=1
 ADC1.Offset-1\#ChannelRegularConversion=0
+ADC1.Offset-2\#ChannelRegularConversion=0
 ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-1\#ChannelRegularConversion=1
+ADC1.Rank-2\#ChannelRegularConversion=2
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
 CAN.ABOM=DISABLE
 CAN.BS1=CAN_BS1_10TQ
@@ -21,7 +29,7 @@ FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_vTaskDelayUntil=1
 FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_PREEMPTION,INCLUDE_vTaskDelayUntil,Mutexes01
 FREERTOS.Mutexes01=canTxMutex,Static,canTxMutexControlBlock
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;achooController,0,128,achooControllerFunc,As external,NULL,Static,achooControllerBuffer,achooControllerControlBlock;canRxDispatch,1,128,canRxDispatchTask,As external,NULL,Static,canRxDispatchBuffer,canRxDispatchControlBlock;gesundheitTask,0,128,gesundheitControllerFunc,As external,NULL,Static,gesundheitTaskBuffer,gesundheitTaskControlBlock;sneezeControl,0,128,sneezeControllerFunc,As external,NULL,Static,sneezeControlBuffer,sneezeControlControlBlock;drivetrainTask,0,128,drivetrain_loop,As external,NULL,Static,drivetrainTaskBuffer,drivetrainTaskControlBlock
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;achooController,0,128,achooControllerFunc,As external,NULL,Static,achooControllerBuffer,achooControllerControlBlock;canRxDispatch,1,128,canRxDispatchTask,As external,NULL,Static,canRxDispatchBuffer,canRxDispatchControlBlock;gesundheitTask,0,128,gesundheitControllerFunc,As external,NULL,Static,gesundheitTaskBuffer,gesundheitTaskControlBlock;sneezeControl,0,128,sneezeControllerFunc,As external,NULL,Static,sneezeControlBuffer,sneezeControlControlBlock;blessyouControl,0,128,blessyou_controller,As external,NULL,Static,blessyouControlBuffer,blessyouControlControlBlock
 FREERTOS.configUSE_PREEMPTION=0
 File.Version=6
 KeepUserPlacement=false
@@ -299,7 +307,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_CAN_Init-CAN-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_CAN_Init-CAN-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_ADC2_Init-ADC2-false-HAL-true
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
 RCC.AHBFreq_Value=72000000
